--- a/src/_base.scss
+++ b/src/_base.scss
@@ -17,6 +17,7 @@ $size-m: 1rem;
 $size-ml: 1.125rem;
 $size-mxl: 1.25rem;
 $size-l: 1.3rem;
+$size-lml: 1.875rem;
 $size-ll: 2.25rem;
 $size-xl: 3.75rem;
 $size-xxl: 5rem;
