--- a/src/Components/CTAComponent/CTAComponent.scss
+++ b/src/Components/CTAComponent/CTAComponent.scss
@@ -11,7 +11,7 @@
   border-radius: 10px;
 
   &__title {
-    font-size: $size-ll;
+    font-size: $size-lml;
     font-weight: 600;
   }
   &__paragraph {
